--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -1,2 +1,7 @@
 Django==5.1
 psycopg2-binary==2.9.9
+channels==3.0.5
+channels_redis==4.2.1
+redis==5.2.1
+django-cors-headers==4.4.0
+django-sslserver-v2==1.0
